--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Fundamentals Curriculum",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open --mode development"
   },
   "repository": {
     "type": "git",
