--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "firebase-tools": "^3.17.7",
     "html-webpack-plugin": "^3.0.7",
     "mini-css-extract-plugin": "^0.3.0",
