--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -45,8 +46,8 @@
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.2.2",
     "whatwg-fetch": "^2.0.3"
   },
